# FIAP-hackaton-fase-5

./: .gitignore  README.md
ai_module/: .env-exemplo  README.md  pyproject.toml
ai_module/src/ai_module/: main.py
ai_module/src/ai_module/adapters/: __init__.py  base.py  factory.py  gemini_adapter.py  openai_adapter.py  rabbitmq_adapter.py
ai_module/src/ai_module/api/: routes.py
ai_module/src/ai_module/core/: exceptions.py  logger.py  metrics.py  pipeline.py  preprocessor.py  prompt_builder.py  report_validator.py  settings.py  state.py
ai_module/src/ai_module/models/: queue.py  report.py  request.py
ai_module/src/ai_module/worker/: __init__.py  consumer.py  exceptions.py  publisher.py
ai_module/tests/: conftest.py  test_aiopika_import.py
ai_module/tests/contract/: test_analyze_required_params.py  test_queue_contract.py  test_result_contracts.py  test_soat_contract.py
ai_module/tests/integration/: test_analyze_image.py  test_analyze_pdf.py  test_consumer_publisher.py  test_fun002_dat001_integration.py  test_fun002_err001_integration.py  test_fun002_sec002_integration.py  test_hello_world.py  test_observability.py  test_rabbitmq_publish.py  test_routes.py  test_shared_adapter.py  test_worker_integration.py
ai_module/tests/unit/: test_adapters.py  test_analyze_required_inputs.py  test_consumer.py  test_main_docstrings.py  test_pipeline.py  test_preprocessor.py  test_prompt_builder.py  test_publisher.py  test_queue_models.py  test_rabbitmq_adapter.py  test_report_validator.py  test_routes.py  test_settings.py
docs/: AUDIT-FUN-001.md  plan-FUN-001.md  (+1 more)
(+11 files in other folders)
